# car_arm

./: .gitignore  readme.txt  start_arm.sh  start_car.sh  start_car_arm.sh  stop_car_arm.sh  train_car_arm_safe_rl.sh
ros2_ws/: README.md  frames_2026-06-02_23.20.43.gv  底盘代码修改说明.md
ros2_ws/src/: rebotarm_bringup  rebotarm_moveit_config  rebotarm_moveit_demos  rebotarm_msgs  rebotarmcontroller
ros2_ws/src/_external_rebot/reBot-DevArm/: README.md  README_Fr.md  README_JP.md  README_es.md  README_zh.md
ros2_ws/src/_external_rebot/reBot-DevArm/hardware/reBot_B601_DM/: readme.md  readme_es.md  readme_fr.md  readme_jp.md  readme_zh.md
ros2_ws/src/_external_rebot/reBotArmController_ROS2/: .gitignore  API_zh.md  README.md  README_zh.md
ros2_ws/src/_external_rebot/reBotArmController_ROS2/src/rebotarm_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/_external_rebot/reBotArmController_ROS2/src/rebotarm_bringup/config/: driver_params.yaml  rebotarm_hardware.yaml
ros2_ws/src/_external_rebot/reBotArmController_ROS2/src/rebotarm_bringup/description/meshes/: base_link.STL  link1.STL  link3.STL  link4.STL  link5.STL  link6.STL
ros2_ws/src/_external_rebot/reBotArmController_ROS2/src/rebotarm_bringup/description/meshes_b601_gripper/: base_link.STL  gripper_left.STL  gripper_link.STL  gripper_right.STL  link1.STL  link4.STL  link5.STL  link6.STL
ros2_ws/src/_external_rebot/reBotArmController_ROS2/src/rebotarm_bringup/description/meshes_rs/: base_link.STL  cnc2.STL  cnc3.STL  cnc4.STL  cnc5.STL  cnc7.STL  cnc_left.STL  cnc_right.STL  gripper_end.STL  gripper_left.STL  gripper_right.STL  link1.STL  link5.STL  link6.STL  motor_5.STL  motor_6.STL  motor_7.STL  pla2_black.STL  pla2_green.STL  pla3_black.STL  pla3_green.STL  pla5_green.STL  pla7_green.STL  pla_left.STL  pla_right.STL
ros2_ws/src/_external_rebot/reBotArmController_ROS2/src/rebotarm_bringup/description/urdf/: 00-arm-rs_asm-v3.urdf  reBot-DevArm_fixend.urdf  reBot_B601_DM_with_gripper.urdf
ros2_ws/src/_external_rebot/reBotArmController_ROS2/src/rebotarm_bringup/launch/: bringup.launch.py  driver.launch.py
ros2_ws/src/_external_rebot/reBotArmController_ROS2/src/rebotarm_bringup/rviz/: rebotarm.rviz
ros2_ws/src/_external_rebot/reBotArmController_ROS2/src/rebotarm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ros2_ws/src/_external_rebot/reBotArmController_ROS2/src/rebotarm_moveit_config/config/: initial_positions.yaml  moveit_hardware_controllers.yaml  ompl_planning.yaml  rebotarm.ros2_control.xacro  rebotarm.srdf  rebotarm.urdf.xacro  rebotarm_rs.ros2_control.xacro  rebotarm_rs.srdf  rebotarm_rs.urdf.xacro  ros2_controllers.yaml
ros2_ws/src/_external_rebot/reBotArmController_ROS2/src/rebotarm_moveit_config/launch/: demo.launch.py  demo_view.rviz  hardware.launch.py  moveit.rviz  moveit_launch_common.py
ros2_ws/src/rebot_gas_spray_demo/: package.xml  setup.cfg  setup.py
ros2_ws/src/rebot_gas_spray_demo/config/: joint_limits.yaml  rebot_dm_spray.srdf  rebot_dm_spray.urdf.xacro
ros2_ws/src/rebot_gas_spray_demo/launch/: rebot_dm_circle_points_demo.launch.py  rebot_dm_spray_demo.launch.py
ros2_ws/src/rebot_gas_spray_demo/rebot_gas_spray_demo/: gas_field_simulator.py  rebot_circle_point_task.py  rebot_spray_task.py  spray_simulator.py
ros2_ws/src/rebot_gas_spray_demo/rviz/: rebot_dm_circle_points_demo.rviz  rebot_dm_spray_demo.rviz
ros2_ws/src/version_car_sim/: package.xml  setup.cfg  setup.py
ros2_ws/src/version_car_sim/.ipynb_checkpoints/: setup-checkpoint.py
ros2_ws/src/version_car_sim/config/fast_lio/: mid360_gazebo.yaml  mid360_sim.yaml
ros2_ws/src/version_car_sim/config/nav2/: mid360_nav2.yaml
ros2_ws/src/version_car_sim/config/rebot/: joint_limits.yaml  mobile_rebot_b601_dm.srdf  moveit_controllers.yaml
ros2_ws/src/version_car_sim/config/rviz/: car_01.rviz  car_01_lidar.rviz  d435i_vision_sim.rviz  livox_fast_lio.rviz  mid360_fast_lio_mapping.rviz
ros2_ws/src/version_car_sim/config/worlds/: car_01.world  d435i_vision_world.world  livox_fast_lio_world.world  mid360_fast_lio_world.world
ros2_ws/src/version_car_sim/launch/: d435i_vision_sim.launch.py  gas_leak_car_arm_demo.launch.py  gas_leak_mobile_manipulator_demo.launch.py  livox_fast_lio_sim.launch.py  mid360_fast_lio_mapping.launch.py  rebot_arm_motion_debug.launch.py  rebot_arm_speed_debug.launch.py  rebot_safe_rl_test.launch.py  sim.launch.py
ros2_ws/src/version_car_sim/models/: mobile_rebot_b601_dm.urdf.xacro  version_car.sdf  version_car_d435i.sdf  version_car_d435i.urdf  version_car_livox3d.sdf  version_car_mid360_fastlio.sdf  version_car_mid360_rebot_b601_dm.sdf
ros2_ws/src/version_car_sim/rviz/: version_car_sim.rviz
ros2_ws/src/version_car_sim/scripts/: evaluate_rebot_safe_policy.py  train_rebot_safe_ppo_lagrangian.py
ros2_ws/src/version_car_sim/trained_policies/rebot_safe_ppo_lagrangian/: eval_200_random_targets.json  policy.pt  training_log.csv
ros2_ws/src/version_car_sim/trained_policies/rebot_safe_ppo_lagrangian_bc30/: policy.pt
ros2_ws/src/version_car_sim/trained_policies/rebot_safe_ppo_lagrangian_gazebo/: policy.pt
ros2_ws/src/version_car_sim/trained_policies/rebot_safe_ppo_lagrangian_traj_bc/: policy.pt  training_log.csv
ros2_ws/src/version_car_sim/version_car_sim/: astar_planner.py  auto_goal_publisher.py  cmd_vel_monitor.py  d435i_astar_planner.py  d435i_depth_obstacle_mapper.py  d435i_visual_obstacle_avoidance.py  ego_goal_bridge.py  ego_position_cmd_to_twist.py  fast_lio_stub.py  gas_field_simulator.py  gas_leak_car_arm_task.py  gas_leak_mobile_manipulator_task.py  local_obstacle_avoidance.py  mapping_drive_node.py  mcu_protocol_bridge.py  nav2_waypoint_commander.py  occupancy_mapper.py  pointcloud_to_costmap.py  rebot_arm_minimal_test.py  spray_simulator.py  start_pose_setter.py  trajectory_recorder.py  vehicle_geometry.py
ros2_ws/src/version_car_sim/version_car_sim/rl/: __init__.py  rebot_safe_rl_controller.py  rebot_safe_rl_env.py  rebot_safe_rl_gazebo_trainer.py  safety_geometry.py
ros2_ws/src/version_car_sim/worlds/: test_track.world
说明/: 说明1.md
(+105 files in other folders)
